--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "^12.3.0",
     "next-pwa": "^5.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -14,8 +14,11 @@
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.11",
     "eslint": "^8.20.0",
     "eslint-config-next": "12.2.3",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.5.4"
   }
 }
